# MobileNativeLibraryTest

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  Travis-CI-build-setup.md  Travis-CI-build-setup.txt
MyApp/: CMakeLists.txt  MyApp.cpp
MyJavaApp/: CMakeLists.txt  JavaExample.java
MyJavaLibrary/: CMakeLists.txt  com_example_myjavawrapper_JavaLibraryWrapper.cpp  com_example_myjavawrapper_JavaLibraryWrapper.h  com_example_myjavawrapper_MyJavaWrapper.cpp
MyJavaLibrary/com/example/myjavawrapper/: JavaExample.java  JavaLibraryWrapper.java  MyJavaWrapper.java
MyLibrary/: CMakeLists.txt  MyLibrary.cpp  MyLibrary.h
MyLibraryIdl/: MyLibrary.djinni  djinni_run.sh
MyiOSDemoApp/MyiOSDemoApp/: ViewController.h  ViewController.mm
MyiOSDemoApp/MyiOSDemoApp.xcodeproj/: project.pbxproj
MyiOSDemoApp/MyiOSDemoApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MyiOSDemoApp/MyiOSDemoApp.xcodeproj/xcshareddata/xcschemes/: MyiOSDemoApp.xcscheme
MyiOSDemoApp/MyiOSDemoApp/Base.lproj/: Main.storyboard
MyiOSDemoApp/MyiOSDemoAppTests/: MyiOSDemoAppTests.m
MyiOSDemoApp/MyiOSDemoAppUITests/: MyiOSDemoAppUITests.m
MyiOSStaticLibrary/: MyLibraryWrapper.h  MyLibraryWrapper.mm
MyiOSStaticLibrary/MyiOSStaticLibrary.xcodeproj/: project.pbxproj
MyiOSStaticLibrary/MyiOSStaticLibrary.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MyiOSStaticLibrary/MyiOSStaticLibrary.xcodeproj/xcshareddata/xcschemes/: MyiOSStaticLibrary.xcscheme  UnitTests.xcscheme  UniversalStaticLibrary.xcscheme
MyiOSStaticLibrary/UnitTests/: UnitTests.mm
